Calender design using html table

--- a/Calender Design/index.html
+++ b/Calender Design/index.html
@@ -16,11 +16,9 @@
     </style>
 </head>
 <body>
-    <table style="width: 30%">
+    <table style="width: 30%" align="center">
 
-        <thead >
-            <td colspan="7" style="color: chocolate;background-color: white;">January 2021</td>
-        </thead>
+        <h5 align="center">January 2021</h5>
         <tr>
             <th>sun</th>
             <th>mon</th>
