--- a/Freecodecamp/index.html
+++ b/Freecodecamp/index.html
@@ -32,7 +32,9 @@
 
             <section>
                 <h2>Desserts</h2>
-                <article class="item"></article>
+                <article class="item">
+                    <p class="dessert">Donut</p><p class="price">1.50</p>
+                </article>
             </section>
 
         </main>
