--- a/Day3-5/Freecodecamp/project0/index.html
+++ b/Day3-5/Freecodecamp/project0/index.html
@@ -10,9 +10,10 @@
     <div id="menu" class="menu">
         <main>
             <h1>CAMPER CAFE</h1>
-            <p>Est. 2020</p>
+            <p class="established">Est. 2020</p><hr>
             <section>
                 <h2>Coffee</h2>
+                <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
                 <article class="item">
                     <p class="flavor">French Vanilla</p><p class="price">3.00</p>
                 </article>
@@ -32,12 +33,28 @@
 
             <section>
                 <h2>Desserts</h2>
+                <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon">
                 <article class="item">
                     <p class="dessert">Donut</p><p class="price">1.50</p>
                 </article>
+
+                <article class="item">
+                    <p class="dessert">Cherry pie</p><p class="price">2.75</p>
+                </article>
+                <article class="item">
+                    <p class="dessert">Cheesecake</p><p class="price">3.00</p>
+                </article>
+                <article class="item">
+                    <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
+                </article>
             </section>
 
-        </main>
+        </main><hr class="bottom-line">
+
+        <footer>
+            <p><a href="https://www.freecodecamp.com">Visit our website</a></p>
+            <p>123 Free Code Camp Drive</p>
+        </footer>
     </div>
 </body>
 </html>
